Change _ICC_PROFILE atom assignment to properly support multiscreen

In ColorD::addOutput: handle case when ColorD already has the device
we're trying to add
Detect connected output atom IDs and apply set _ICC_PROFILE for each

This is a largerly unchanged patch from corresponding bugzilla page
Changes to patch: split getAtomIds a bit, remove unneeded pointer wrap

I don't really have calibrated screens to test how correct the set atoms
are, but this patch makes darktable-cmstest happy and it seems to
compare colord profile content to _ICC_PROFILE atoms, so I guess it
should be good

BUG: 328248